src/objects/Subscription_Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions (Vendor)</relationshipLabel>
        <relationshipName>Subscriptions_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HDS_Subscription_Id__c</fullName>
        <label>HDS Subscription Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Subscriptions (Vendor)</relationshipLabel>
        <relationshipName>Subscriptions_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Temp_Stop_Days__c</fullName>
        <label>Previous Year Temp Stop Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <description>Field to contain the publication codes from Subscription (Vendor) Publications related list.</description>
        <label>Publication Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Delivery_Address__c</fullName>
        <formula>Recipient__r.Address__r.Block_House_Number__c + &quot; &quot; + Recipient__r.Address__r.Street_Name__c + &quot; &quot; + Recipient__r.Address__r.Building_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Unique_Address__c</fullName>
        <formula>Recipient__r.Address_Unique_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Unique Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions (Vendor)</relationshipLabel>
        <relationshipName>Subscriptions_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Inactive&quot;), &quot;Inactive&quot;,
IF(Subscription_Start_Date__c &gt; Subscription_Stop_Date__c, &quot;Deleted&quot;,
IF(Subscription_Stop_Date__c &lt; TODAY(),
IF(ISPICKVAL(Status__c, &quot;Cancelled&quot;) , &quot;Terminated&quot;, &quot;Expired&quot;),
IF(Subscription_Start_Date__c &gt; TODAY(), &quot;Future Active&quot;, &quot;Active&quot;))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Stop_Date__c</fullName>
        <label>Subscription Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Stop_Count_Year_to_Date__c</fullName>
        <label>Temp Stop Count (Year to Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSSSource_Type_ID__c</fullName>
        <label>VSSSource Type ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSS_Subscription_ID__c</fullName>
        <label>VSS Subscription ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Vendor__r.Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Number__c</fullName>
        <formula>Vendor__r.Handphone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Subscription_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Subscription Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions (Vendor) (Vendor)</relationshipLabel>
        <relationshipName>Subscriptions_Vendor1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscription (Vendor)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SV-{0000000000}</displayFormat>
        <label>Subscription (Vendor) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions (Vendor)</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Subscription_VendorEndDateLessThanStart</fullName>
        <active>true</active>
        <description>Subscription_VendorEndDateLessThanStart date
UD2502</description>
        <errorConditionFormula>Subscription_Stop_Date__c &lt;  Subscription_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Subscription_Stop_Date__c</errorDisplayField>
        <errorMessage>Subscription Stop Date must not less than Subscription Start date</errorMessage>
    </validationRules>
</CustomObject>